--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 html{
-    background: linear-gradient(89deg, #aa00ff 0%, #512c63 100%);
+    background: linear-gradient(89deg, #bc68be 0%, #2989af 100%);
 }
 
 body {
